--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@ html, body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: #f9fafb;
+  background: #ffffff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
