--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -171,7 +171,8 @@ body {
   display: flex !important;
   align-items: center !important;
   width: 100% !important;
-  gap: 12px !important;
+  max-width: 800px !important;
+  gap: 8px !important;
 }
 
 .cs-message-input__content-editor-wrapper {
